# chip9

./: .clang-format  .clangd  CMakeLists.txt  chip8_blogs.txt
inc/: chip8.h  common.h
src/: chip8.cpp  common.cpp  main.cpp
